@@ -21,8 +21,7 @@ inline D3DXVECTOR4 convertColor(const COLORREF c, const float w = 1.0f)
 	const float r = (float)(c & 255) * (float)(1.0/255.0);
 	const float g = (float)(c & 65280) * (float)(1.0/65280.0);
 	const float b = (float)(c & 16711680) * (float)(1.0/16711680.0);
-	D3DXVECTOR4 d(r,g,b,w);
-	return d;
+	return D3DXVECTOR4(r,g,b,w);
 }
 
 inline float invGammaApprox(const float c)
